--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
+.section-main-menu-search-obj {
+  width: 100%; }
+  .section-main-menu-search-obj input {
+    width: 100%;
+    height: 43px;
+    background: #FFFFFF;
+    border: 2px solid #DDDDDD;
+    box-sizing: border-box; }
+  .section-main-menu-search-obj::after {
+    content: "";
+    width: 1px;
+    height: 20px;
+    margin-left: 20px;
+    background-color: #000; }
+
 body {
   font-family: Roboto;
   font-style: normal;
@@ -9,8 +24,7 @@ body {
   body .inner-image {
     margin: 0 auto;
     padding: 0;
-    position: relative;
-    height: 800px; }
+    position: relative; }
     body .inner-image h2 {
       font-size: 18px;
       font-weight: 400;
@@ -50,19 +64,26 @@ body {
 
 .section-main .section-main-txt {
   padding-top: 35%;
+  padding-bottom: 35px;
   margin-left: 5%; }
 .section-main .section-main-menu {
   width: 100%; }
   .section-main .section-main-menu .section-main-menu-nav {
+    flex-wrap: wrap;
     display: flex;
-    margin: 41px auto 77px auto;
-    width: 1254px; }
+    margin: auto;
+    width: 1254px;
+    padding-top: 39px; }
     .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block {
-      margin-left: auto; }
+      margin-left: auto;
+      padding-top: 2px; }
       .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block ul {
+        flex-wrap: wrap;
         display: flex;
         justify-content: space-between;
         width: 263px; }
+        .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block ul .section-main-menu-navbar-search-block-after:last-child::after {
+          margin-left: 30px; }
         .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block ul .section-main-menu-navbar-search-block-after::after {
           content: "";
           position: absolute;
@@ -70,11 +91,13 @@ body {
           height: 20px;
           margin-left: 20px;
           background-color: #000; }
-    .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar ul {
-      display: flex;
-      justify-content: space-between;
-      width: 298px;
-      margin-left: 155px; }
+    .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar {
+      padding-top: 2px; }
+      .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar ul {
+        display: flex;
+        justify-content: space-between;
+        width: 298px;
+        margin-left: 155px; }
 
 .section-cart-shop .section-cart-shop-btn {
   cursor: pointer;
@@ -118,20 +141,17 @@ body {
   display: flex;
   width: 706px; }
   .section-cart-shop .section-cart-shop-list .section-cart-shop-link:hover {
-    color: black; }
-    .section-cart-shop .section-cart-shop-list .section-cart-shop-link:hover::before {
-      content: "";
-      position: absolute;
-      width: 90px;
-      height: 1px;
-      background-color: #000;
-      margin-top: 22px;
-      margin-left: 0; }
+    color: black;
+    padding-bottom: 8px;
+    border-bottom: 1.2px solid #4d4d4d;
+    text-transform: capitalize;
+    position: relative; }
 
 .section-analog-txt {
-  padding-top: 9%;
+  padding-top: 10%;
+  padding-bottom: 10%;
   margin: auto;
-  width: 1160px;
+  width: 75%;
   height: 204px; }
   .section-analog-txt h1 {
     font-family: Roboto;
@@ -170,13 +190,14 @@ body {
 
 .section-refillable {
   width: 100%;
-  height: 690px;
+  height: inherit;
   background: #312F2E; }
   .section-refillable .section-refillable-block {
     justify-content: center;
     display: flex;
     margin: auto;
-    padding-top: 6.5%; }
+    padding-top: 6.5%;
+    padding-bottom: 6.5%; }
     .section-refillable .section-refillable-block .section-refillable-txt {
       background-color: #F7F7F7;
       max-width: 406px;
@@ -225,7 +246,7 @@ body {
       background-color: #000000;
       width: 100px;
       height: 1px;
-      margin-top: 20px; }
+      margin-top: 25px; }
   .section-shop .section-shop-men-woomen {
     width: 100%;
     margin: auto;
@@ -246,8 +267,9 @@ body {
 
 .section-design .section-design-txt {
   padding-top: 12.5%;
+  padding-bottom: 12.5%;
   margin: auto;
-  width: 782px; }
+  width: 100%; }
   .section-design .section-design-txt h1 {
     font-family: Roboto;
     font-style: normal;
@@ -308,24 +330,26 @@ body {
       font-family: Roboto;
       font-size: 31px;
       border: 1px solid #242424;
-      width: 338px;
-      height: 48px; }
+      width: 80%;
+      height: 48px;
+      border-right: 1px solid; }
     .section-input .section-input-txt .section-input-btn {
       content: "";
-      width: 66px;
+      width: 20%;
       height: 52px;
       border: 1px solid #242424;
       background: #FFFFFF;
-      margin-left: 1px; }
+      border-left: 0; }
       .section-input .section-input-txt .section-input-btn:hover {
         cursor: pointer; }
 
 .section-footer {
   width: 100%;
-  height: 359px;
+  min-height: 359px;
   background-color: #F7F7F7;
   padding-top: 8%; }
   .section-footer .footer {
+    min-height: 359px;
     margin: auto;
     width: 1158px;
     display: flex;
