--- a/css/main.css
+++ b/css/main.css
@@ -5,22 +5,15 @@
     height: 43px;
     background: #FFFFFF;
     border: 2px solid #DDDDDD;
-    box-sizing: border-box; }
-  .section-main-menu-search-obj::after {
-    content: "";
-    width: 1px;
-    height: 20px;
-    margin-left: 20px;
-    background-color: #000; }
+    outline: 10px solid #fff;
+    box-sizing: border-box;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2); }
 
 body {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 16px; }
-  body input:active, body input:hover, body input:focus {
-    outline: 0;
-    outline-offset: 0; }
   body .inner-image {
     margin: 0 auto;
     padding: 0;
@@ -67,7 +60,8 @@ body {
   padding-bottom: 35px;
   margin-left: 5%; }
 .section-main .section-main-menu {
-  width: 100%; }
+  width: 100%;
+  padding-bottom: 35px; }
   .section-main .section-main-menu .section-main-menu-nav {
     flex-wrap: wrap;
     display: flex;
@@ -231,7 +225,7 @@ body {
 
 .section-shop {
   margin: auto;
-  width: 1160px; }
+  width: 100%; }
   .section-shop h1 {
     padding-top: 7px;
     font-family: Roboto;
