--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,29 +1,18 @@
 .section-main-menu-search-obj {
   width: 100%;
+
   input {
     width: 100%;
     height: 43px;
     background: #FFFFFF;
     border: 2px solid #DDDDDD;
+    outline: 10px solid #fff;
     box-sizing: border-box;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   }
-  &::after {
-    content: "";
-    width: 1px;
-    height: 20px;
-    margin-left: 20px;
-    background-color: #000;
-  }
-
 }
 
 body {
-  input {
-    &:active, &:hover, &:focus {
-      outline: 0;
-      outline-offset: 0;
-    }
-  }
 
   font-family: Roboto;
   font-style: normal;
@@ -95,6 +84,7 @@ body {
 
   .section-main-menu {
     width: 100%;
+    padding-bottom: 35px;
 
     .section-main-menu-nav {
       flex-wrap: wrap;
