--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,16 @@
-.section-main-menu-search-obj {
-  width: 100%; }
-  .section-main-menu-search-obj input {
-    width: 100%;
-    height: 43px;
-    background: #FFFFFF;
-    border: 2px solid #DDDDDD;
-    outline: 10px solid #fff;
-    box-sizing: border-box;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2); }
+a {
+  text-decoration: none;
+  color: inherit; }
+
+input {
+  margin-top: 5px;
+  width: 100%;
+  height: 43px;
+  background: #FFFFFF;
+  border: 2px solid #DDDDDD;
+  outline: 10px solid #fff;
+  box-sizing: border-box;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2); }
 
 body {
   font-family: Roboto;
@@ -77,7 +80,7 @@ body {
         justify-content: space-between;
         width: 263px; }
         .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block ul .section-main-menu-navbar-search-block-after:last-child::after {
-          margin-left: 30px; }
+          margin-left: 20px; }
         .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block ul .section-main-menu-navbar-search-block-after::after {
           content: "";
           position: absolute;
@@ -105,6 +108,11 @@ body {
   font-weight: 300;
   font-size: 20px;
   text-align: center; }
+  .section-cart-shop .section-cart-shop-btn:hover {
+    color: #000;
+    background-color: #fff;
+    border: 1px solid #000;
+    line-height: 54px; }
 .section-cart-shop .section-cart-shop-cards {
   display: flex;
   flex-wrap: wrap;
