--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,31 @@
+:active, :hover, :focus {
+  outline: 0;
+  outline-offset: 0; }
+
+.hamburger-menu {
+  display: none; }
+
+/* pizdec */
 a {
   text-decoration: none;
   color: inherit; }
 
-input {
+.input-search_burger {
+  margin-top: 5px;
+  width: 80%;
+  height: 45px;
+  margin-left: 27px;
+  background: #FFFFFF;
+  border: 2px solid #DDDDDD;
+  outline: 10px solid #fff;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  font-family: Roboto sans-serif;
+  font-size: 23px;
+  font-weight: 400;
+  padding-left: 15px;
+  padding-right: 15px; }
+
+.input-search {
   margin-top: 5px;
   width: 100%;
   height: 43px;
@@ -73,21 +96,23 @@ body {
     padding-top: 39px; }
     .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block {
       margin-left: auto;
-      padding-top: 2px; }
-      .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block ul {
-        flex-wrap: wrap;
+      padding-top: 2px;
+      width: 320px;
+      display: flex;
+      flex-wrap: wrap; }
+      .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block .section__search_list {
+        width: 233px;
         display: flex;
         justify-content: space-between;
-        width: 263px; }
-        .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block ul .section-main-menu-navbar-search-block-after:last-child::after {
-          margin-left: 20px; }
-        .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block ul .section-main-menu-navbar-search-block-after::after {
+        text-align: right;
+        margin-left: auto; }
+        .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar-search-block .section__search_list .section__search_element::before {
           content: "";
           position: absolute;
+          background-color: #000;
           width: 1px;
           height: 20px;
-          margin-left: 20px;
-          background-color: #000; }
+          margin-left: -10px; }
     .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar {
       padding-top: 2px; }
       .section-main .section-main-menu .section-main-menu-nav .section-main-menu-navbar ul {
@@ -97,11 +122,13 @@ body {
         margin-left: 155px; }
 
 .section-cart-shop .section-cart-shop-btn {
+  border: 1px solid black;
+  margin: auto;
+  transition: 0.3s;
   cursor: pointer;
   width: 302px;
   line-height: 56px;
   background: #1A1A1A;
-  margin: 56px auto;
   color: #F7F7F7;
   font-family: Roboto;
   font-style: normal;
@@ -109,10 +136,10 @@ body {
   font-size: 20px;
   text-align: center; }
   .section-cart-shop .section-cart-shop-btn:hover {
+    transition: 0.3s;
     color: #000;
     background-color: #fff;
-    border: 1px solid #000;
-    line-height: 54px; }
+    border: 1px solid #000; }
 .section-cart-shop .section-cart-shop-cards {
   display: flex;
   flex-wrap: wrap;
@@ -121,6 +148,8 @@ body {
   justify-content: space-between; }
   .section-cart-shop .section-cart-shop-cards img:hover {
     cursor: pointer; }
+  .section-cart-shop .section-cart-shop-cards .section-cart-shop-cart-block-cart {
+    padding-bottom: 31px; }
   .section-cart-shop .section-cart-shop-cards .section-cart-shop-cart-block-cart-name {
     font-family: Roboto;
     font-style: normal;
@@ -133,8 +162,7 @@ body {
     font-weight: normal;
     font-size: 13px;
     color: #808080;
-    padding-top: 6px;
-    padding-bottom: 31px; }
+    padding-top: 6px; }
 .section-cart-shop .section-cart-shop-list {
   font-size: 17px;
   color: #B3B3B3;
@@ -142,17 +170,23 @@ body {
   justify-content: space-between;
   display: flex;
   width: 706px; }
-  .section-cart-shop .section-cart-shop-list .section-cart-shop-link:hover {
-    color: black;
-    padding-bottom: 8px;
-    border-bottom: 1.2px solid #4d4d4d;
-    text-transform: capitalize;
-    position: relative; }
+  .section-cart-shop .section-cart-shop-list .section-cart-shop-link {
+    transition-duration: 0.3s;
+    padding-bottom: 4px;
+    border-bottom: 1.2px solid #fff;
+    text-transform: capitalize; }
+    .section-cart-shop .section-cart-shop-list .section-cart-shop-link:hover {
+      transition-duration: 0.4s;
+      color: black;
+      border-bottom: 1.2px solid #4d4d4d;
+      text-transform: capitalize;
+      position: relative; }
 
 .section-analog-txt {
   padding-top: 10%;
   padding-bottom: 10%;
   margin: auto;
+  margin-top: 185px;
   width: 75%;
   height: 204px; }
   .section-analog-txt h1 {
@@ -249,14 +283,6 @@ body {
       width: 100px;
       height: 1px;
       margin-top: 25px; }
-  .section-shop .section-shop-men-woomen {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap; }
-    .section-shop .section-shop-men-woomen .section-shop-img-obj {
-      margin: 102px auto; }
   .section-shop p {
     padding-top: 113px;
     padding-bottom: 92px;
@@ -266,6 +292,15 @@ body {
     font-size: 30px;
     text-align: center;
     color: #1A1A1A; }
+
+.section-shop-men-woomen {
+  margin: auto;
+  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  width: 1160px; }
+  .section-shop-men-woomen .section-shop-img-obj {
+    padding-top: 71px; }
 
 .section-design .section-design-txt {
   padding-top: 12.5%;
@@ -330,11 +365,13 @@ body {
       color: #1A1A1A; }
     .section-input .section-input-txt input {
       font-family: Roboto;
-      font-size: 31px;
+      font-size: 22px;
       border: 1px solid #242424;
       width: 80%;
       height: 48px;
-      border-right: 1px solid; }
+      border-right: 1px solid;
+      padding-left: 15px;
+      padding-right: 15px; }
     .section-input .section-input-txt .section-input-btn {
       content: "";
       width: 20%;
@@ -383,5 +420,3 @@ body {
         margin-left: auto; }
         .section-footer .section-footer-right .section-footer-logo .section-footer-images img {
           margin-left: 16px; }
-          .section-footer .section-footer-right .section-footer-logo .section-footer-images img:hover {
-            cursor: pointer; }
