--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,33 @@
+:active, :hover, :focus {
+  outline: 0;
+  outline-offset: 0;
+}
+.hamburger-menu {
+  display: none;
+}
+/* pizdec */
 a {
   text-decoration: none;
   color: inherit;
 }
-input {
+
+.input-search_burger {
+  margin-top: 5px;
+  width: 80%;
+  height: 45px;
+  margin-left: 27px;
+  background: #FFFFFF;
+  border: 2px solid #DDDDDD;
+  outline: 10px solid #fff;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  font-family: Roboto sans-serif;
+  font-size: 23px;
+  font-weight: 400;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.input-search {
   margin-top: 5px;
   width: 100%;
   height: 43px;
@@ -97,32 +122,25 @@ body {
       .section-main-menu-navbar-search-block {
         margin-left: auto;
         padding-top: 2px;
-
-
-        ul {
-          flex-wrap: wrap;
+        width: 320px;
+        display: flex;
+        flex-wrap: wrap;
+        .section__search_list {
+          width: 233px;
           display: flex;
           justify-content: space-between;
-          width: 263px;
-
-          .section-main-menu-navbar-search-block-after {
-            &:last-child {
-              &::after {
-                margin-left: 20px;
-              }
-
-            }
-
-            &::after {
+          text-align: right;
+          margin-left: auto;
+          .section__search_element {
+            &::before {
               content: "";
               position: absolute;
+              background-color: #000;
               width: 1px;
               height: 20px;
-              margin-left: 20px;
-              background-color: #000;
+              margin-left: -10px;
             }
           }
-
         }
       }
 
@@ -142,22 +160,25 @@ body {
 
 .section-cart-shop {
   .section-cart-shop-btn {
+    border: 1px solid black;
+    margin: auto;
+    transition: 0.3s;
     cursor: pointer;
     width: 302px;
     line-height: 56px;
     background: #1A1A1A;
-    margin: 56px auto;
     color: #F7F7F7;
     font-family: Roboto;
     font-style: normal;
     font-weight: 300;
     font-size: 20px;
     text-align: center;
+
     &:hover {
+      transition: 0.3s;
       color: #000;
       background-color: #fff;
       border: 1px solid #000;
-      line-height: 54px;
     }
   }
 
@@ -172,6 +193,10 @@ body {
       &:hover {
         cursor: pointer;
       }
+    }
+
+    .section-cart-shop-cart-block-cart {
+      padding-bottom: 31px;
     }
 
     .section-cart-shop-cart-block-cart-name {
@@ -189,7 +214,6 @@ body {
       font-size: 13px;
       color: #808080;
       padding-top: 6px;
-      padding-bottom: 31px;
     }
   }
 
@@ -202,10 +226,13 @@ body {
     width: 706px;
 
     .section-cart-shop-link {
-
+      transition-duration: 0.3s;
+      padding-bottom: 4px;
+      border-bottom: 1.2px solid #fff;
+      text-transform: capitalize;
       &:hover {
+        transition-duration: 0.4s;
         color: black;
-        padding-bottom: 8px;
         border-bottom: 1.2px solid #4d4d4d;
         text-transform: capitalize;
         position: relative;
@@ -218,6 +245,7 @@ body {
   padding-top: 10%;
   padding-bottom: 10%;
   margin: auto;
+  margin-top: 185px;
   width: 75%;
   height: 204px;
 
@@ -343,18 +371,6 @@ body {
     }
   }
 
-  .section-shop-men-woomen {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-    .section-shop-img-obj {
-      margin: 102px auto;
-    }
-  }
-
   p {
     padding-top: 113px;
     padding-bottom: 92px;
@@ -364,6 +380,16 @@ body {
     font-size: 30px;
     text-align: center;
     color: #1A1A1A;
+  }
+}
+.section-shop-men-woomen {
+  margin: auto;
+  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  width: 1160px;
+  .section-shop-img-obj {
+    padding-top: 71px;
   }
 }
 
@@ -447,11 +473,13 @@ body {
 
     input {
       font-family: Roboto;
-      font-size: 31px;
+      font-size: 22px;
       border: 1px solid #242424;
       width: 80%;
       height: 48px;
       border-right: 1px solid;
+      padding-left: 15px;
+      padding-right: 15px;
     }
 
     .section-input-btn {
@@ -523,7 +551,7 @@ body {
           margin-left: 16px;
 
           &:hover {
-            cursor: pointer;
+            
           }
         }
       }
